2005-02-15  Mathieu Peltier <mathieu.peltier@gmail.com>

	* applied [#775] Patch for not able to change file to another
	release/package by Jader Marasca (fixed bug [#663]). Added tests
	on the new release id in order to be sure that the new release
	belongs to a package of the same group.

2005-02-12  Tim Perdue <tim@gforge.org>

	* Adding new function validate_emails() which accepts multiple 
	emails which are comma-separated. This was used so we could accept
	multiple addresses for the notify features when new docs, tasks, 
	artifacts, and forum messages are submitted
	* Monitor an entire tracker in addition to just an individual item
	* Finished tracker_gateway.php so you can send emails to the tracker
	similar to the forum_gateway.php
	* Full text indexing is now an option for searches. Rather than using 
	the exact-match regex functions, we now use tsearch2 functions

2005-01-27  Tim Perdue <tim@gforge.org>

	* FRS file reorganization - files are stored in /group_name/package_name/release_name/

2005-01-20  Greg Hudson <ghudson@mit.edu>

	* Updated priority help text (maximum priority is now 5, not 9)

2005-01-20  Christian Bayle <bayle@debian.org>
	
	* added 'Nice' Patch to add Detail view to Task Manager [#1025]
	proposed by  Steel City Phantom, Thanks
	* Revert TaskDetailView patch until I find a better solution
	* Finally found a better solution...

2005-01-16  Tim Perdue <tim@gforge.org>

	* added BCC-all address so all email can be copied to a 
	certain address for archiving
	* added ability to release files in FRS system that were 
	uploaded via FTP instead of the HTTP upload. Requires several new 
	vars and a FTP upload directory that is readable and owned by the 
	same user as apache.

2005-01-16  Christian Bayle <bayle@debian.org>

	* Added a Makefile, that make easy to build debian package and phpdoc
	* Just give a try to make phpdoc
	* Fixed many lintian error in debian packages, tried also to improve upgrade
